--- a/BillingSystem/Form1.resx
+++ b/BillingSystem/Form1.resx
@@ -127,15 +127,12 @@
         r0z3eWyJsysAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="humMenuRightBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAALtJREFUeF7t
-        27ERwDAAAjHvv3SyAJULKCzdfc8CHAAAAAAAAAAAAAAAAADgOZ+mzaVR6jWXRqnXXBqlXnNplHrNpVHq
-        NZdGqddcGqVeAAAAAAAAAAAAAAAA19JZQb3m0ij1mkuj1GsujVKvuTRKvebSKPWaS6PUay6NUi8AAAAA
-        AAAAAAAAAIBr6aygXnNplHrNpVHqNZdGqddcGqVec2mUes2lUeo1l0apFwAAAAAAAAAAAAAAAADwjHN+
-        r0z3eWyJsysAAAAASUVORK5CYII=
-</value>
-  </data>
+  <metadata name="sPan_timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>46</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAlpYAAAEAIABwawEAFgAAACgAAACWAAAALAEAAAEAIAAAAAAAkF8BAMMOAADDDgAAAAAAAAAA
